bizinikiwi/pezframe/support/test/tests/pezpallet_ui/call_index_has_suffix.stderr
error: Number literal must not have a suffix
  --> tests/pezpallet_ui/call_index_has_suffix.rs:31:33
   |
31 |         #[pezpallet::call_index(0something)]
   |                                 ^^^^^^^^^^
